docker for quick build from dev host

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,24 +1,13 @@
-#
-# Build stage
-#
-FROM maven:3.8.5-jdk-11-slim AS build
-WORKDIR /home/app/
-COPY ./ ./
-# todo call less heavy target to assembly only spring boot jars
-RUN mvn clean install -DskipTests
-
-
-# Package stage
+# Image with pre compiled resources
 
 FROM openjdk:11-jre-slim
 
 WORKDIR /usr/local/lib/app
 
-ENV VERSION=3.3.4
 
-COPY --from=build /home/app/application/target/thingsboard-${VERSION}-boot.jar ./thingsboard-${VERSION}-boot.jar
-COPY --from=build /home/app/application/target/data ./data
-COPY --from=build /home/app/application/target/conf ./conf
+COPY ./application/target/data ./data
+COPY ./application/target/conf ./conf
+COPY ./application/target/thingsboard-3.3.4-SNAPSHOT-boot.jar ./thingsboard-3.3.4-SNAPSHOT-boot.jar
 
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","thingsboard-${VERSION}-boot.jar"]
+ENTRYPOINT ["java","-jar","thingsboard-3.3.4-SNAPSHOT-boot.jar"]
